2.nov (ws)
      - more code for tablature editing with mouse; fixes #7769
1.nov (ws)
      - fix #7614: menu item crash when continuing session with no scores
      - fix #7740: drag and delete + undo causes crash
      - fixed lyrics text style; left align lyrics now work
      - fixes for editing staff type
      - fix #7636: Guitar Staff has wrong amount of lines
      - new text element "Instrument Change"
      - added new palette for text objects
      (la)
      - fix #7745: Insert measure causes crash
      - start foto mode out of scoreview
30.oct (lv)
      - fix #7721: Incorrect chord duration importing MusicXML dotted notes
29.oct (ws)
      - fix #3092: Cannot see 8th note ledger lines
      - fix #6317: ledger lines not long enough for whole notes
28.oct (ws)
      - add tempo selection to new score wizard
      - fix tempo changes (worked only after reloading score), now also works
        with undo/redo
      - initial implementation of textframe object
27.oct (ws)
      - added stubs for "Text Frame" and "Fret Diagram Frame" elements
      - splitted "Measures" menu into "Measures" and "Frames"
      - fixes for frames (fixes save/restore of "schnee.mscz" example)
      - show anchor while dragging repeats
      - fix layout of repeats
26.oct (lv)
      - fix #7593: Incorrect measure duration importing MusicXML
       (ws)
      - add missing "windowIcon"
      - implement "single palette mode"; enable in palette context menu
        (right click into empty area of palette box)
      - add missing "standardIconImplementation()" to mstyle; palette title buttons
        are now visible
      - cleaner synthesizer initialization
25.oct (la)
      - fix #7665: Change instrument, undo does not undo sound
24.oct (lv)
      - fix #6404: Crash editing a MusicXML file
       (ws)
      - fix save/restore split window settings of session
      - fix #7653: crash when play panel is open with no score
      (db)
      - added lutes to instrument list